--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
-  "name": "ETEC Rosa Perrne",
+  "name": "etecrosaperrone",
   "authors": [
     "Gabriel Caruso <carusogabriel34@gmail.com>"
   ],
-  "description": "Arquivo bower para adiquirir versão mais redente do MaterializeCSS",
+  "description": "Arquivo bower para adquirir versão mais recente do MaterializeCSS",
   "main": "",
   "moduleType": [],
   "license": "MIT",
