--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,12 @@
 {
-    "name": "Bruno/hxphp",
+    "name": "Caruso/etecrosaperrone",
     "require": {
         "php-activerecord/php-activerecord": "dev-master"
     },
     "authors": [
         {
-            "name": "Bruno Campos Santos",
-            "email": "bruno@hxphp.com.br"
-        },
-        {
-            "name": "Gilglécio Santos",
-            "email": "gilglecio@hxphp.com.br"
+            "name": "Gabriel Caruso",
+            "email": "carusogabriel34@gmail.com"
         }
     ],
     "autoload": {
